<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F7FA"
    tools:context=".ui.main.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_constraint_layout"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:background="@drawable/home_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/small_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/rubik"
            android:text="@string/find_your"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/big_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/next_destination"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/small_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/small_title_text_view" />

        <ImageView
            android:id="@+id/profile_image_view"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/profile_picture"
            app:layout_constraintBottom_toBottomOf="@id/big_title_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/small_title_text_view"
            app:srcCompat="@drawable/profile" />

        <EditText
            android:id="@+id/search_destination_edit_text"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/search_bg"
            android:drawableStart="@drawable/ic_search_black_24dp"
            android:hint="@string/search_destinations"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="#62678F"
            app:layout_constraintEnd_toEndOf="@id/profile_image_view"
            app:layout_constraintStart_toStartOf="@id/big_title_text_view"
            app:layout_constraintTop_toBottomOf="@id/big_title_text_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/recent_header_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/recent"
        android:textColor="@android:color/background_dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_constraint_layout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/see_all"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/recent_header_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/recent_header_text_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_header_text_view" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="#F0F7FA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recent_recycler_view" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintTop_toBottomOf="@id/tabs" />


</androidx.constraintlayout.widget.ConstraintLayout>